<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:includeFontPadding="false"
            android:text="@string/cars_machinery"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dummy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/dummy"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_filter"
                    app:tint="@color/greydark" />

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:includeFontPadding="false"
                    android:text="@string/filter"
                    android:textColor="@color/greydark"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey50" />

            <LinearLayout
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/sort"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_filter"
                    app:tint="@color/greydark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:includeFontPadding="false"
                    android:text="@string/sort"
                    android:textColor="@color/greydark"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey50" />

            <LinearLayout
                android:id="@+id/grid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_filter"
                    app:tint="@color/greydark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:includeFontPadding="false"
                    android:text="@string/grid"
                    android:textColor="@color/greydark"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <include layout="@layout/content_scrolling" />

</RelativeLayout>