<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/carItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:elevation="@dimen/_1sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_90sdp"
                android:layout_weight="0.9">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_fav" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/blinkView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="2"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/price_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp">

                    <TextView
                        android:id="@+id/car_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/green"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/car_price"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/green"
                        android:textSize="@dimen/_8sdp" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lot_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text="@string/lot"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_8sdp" />

                        <TextView
                            android:id="@+id/lot_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_8sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey50" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bids_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text="@string/bids"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_8sdp" />

                        <TextView
                            android:id="@+id/bids"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_8sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey50" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/time_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text="@string/time_left"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_8sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:includeFontPadding="false"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_8sdp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <cn.iwgang.countdownview.CountdownView
                            android:id="@+id/time_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            app:isHideTimeBackground="true"
                            app:isShowDay="false"
                            app:isShowHour="true"
                            app:isShowMillisecond="false"
                            app:isShowMinute="true"
                            app:isShowSecond="true"
                            app:isTimeTextBold="true"
                            app:suffixGravity="bottom"
                            app:suffixTextColor="@color/black"
                            app:suffixTextSize="@dimen/_8sdp"
                            app:timeTextColor="@color/black"
                            app:timeTextSize="@dimen/_8sdp" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>